--- a/templates/emailfriend_popup.htm
+++ b/templates/emailfriend_popup.htm
@@ -72,7 +72,12 @@ $(document).ready(function(){
 				<input type=hidden name="itemid" id="itemid" value="{{products.catalogid}}">
 <!--START: thumbnail-->
 <div align="center" class="price-info">
+{% if products.catalogid == 11 %}
+<img src='misc/images/{{ products.image1|strreplace:"/assets/templates/default/images/" }}' border="1" style="border-color: ced2bf" width=200>
+{%else%}
 <img src='http://commondatastorage.googleapis.com/swf_product_images/{{ products.thumbnail|strreplace:"assets/images/" }}' border="1" style="border-color: ced2bf">
+{%endif%}
+
 <!--END: thumbnail-->
 <br/>
 <span class="item"><strong>{{products.name}}</strong></span></div>
