--- a/templates/quick_list.htm
+++ b/templates/quick_list.htm
@@ -113,7 +113,7 @@ img{border:none;}
 		{% endif %}
 		<div class="clr pad-tb">
 				{% if products.stock >= 1 %}
-					<div class="blue-button marleft25"><a href="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
+					<div class="blue-button marleft25"><a href="##"  class="pop1" id="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
 				{% else %}
 					<div class="wish-button marleft25"><a href="/waitpopup?itemid={{ products.catalogid }}" class="pop1">WISH LIST</a></div>
 				{% endif %}
@@ -150,7 +150,7 @@ img{border:none;}
 				{% endif %}</td>
 					<td>
 					{% if products.stock >= 1 %}
-					<div class="blue-button"><a href="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
+					<div class="blue-button"><a href="##"  class="pop1" id="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
 				{% else %}
 					{% if request.session.IsLogin %}
 							<div class="wish-button "><a href="##" id="/addtowatchlist?itemid={{products.catalogid}}&name=" class="pop1">WISH LIST</a></div>
@@ -183,7 +183,7 @@ img{border:none;}
 		{% endif %}
 		<div class="clr pad-tb">
 				{% if products.stock >= 1 %}
-					<div class="blue-button marleft25"><a href="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
+					<div class="blue-button marleft25"><a href="##"  class="pop1" id="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
 				{% else %}
 					{% if request.session.IsLogin %}
 						<div class="wish-button marleft25"><a href="/addtowatchlist?itemid={{products.catalogid}}&name=" class="pop1">WISH LIST</a></div>
@@ -231,7 +231,7 @@ img{border:none;}
 					{% endif %}</td>
 		<td width="103" valign=middle>
 					{% if products.stock > 0 %}
-						<div class="blue-button" ><a href="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
+						<div class="blue-button" ><a href="##"  class="pop1" id="/addtocart?item_id={{ products.catalogid }}" href="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
 						<div class="clr orange_text1">&nbsp;&nbsp;<a href="/product?pid={{ products.catalogid }}" class="clr orange_text1">More Details </a></div>
 					{% else %}
 						{% if request.session.IsLogin %}
@@ -272,8 +272,5 @@ img{border:none;}
 <div class="float-left wid10"></div>
 
 </div>
-<div id="popup" style="left: -700px; position: absolute; top: 1177px; z-index: 9999; opacity: 1; display: none;min-height:200px;">
-        
-        <div id="contentss" style="height: auto; width: auto;"></div>
-</div>
+
 {% endblock content %}
