--- a/misc/sty.css
+++ b/misc/sty.css
@@ -1303,4 +1303,52 @@ padding-right: 15px;
     text-transform: uppercase;
     width: auto;
 }
+.alert-danger, .alert-error {
+    background-color: #F2DEDE;
+    border-color: #EED3D7;
+    color: #B94A48;
+	margin-bottom: 10px;
+	padding: 8px 15px 8px 14px;
+}
+.alert {
+    background-color: #FCF8E3;
+    border: 1px solid #FBEED5;
+    border-radius: 2px 2px 2px 2px;
+    margin-bottom: 20px;
+    padding: 8px 15px 8px 14px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+}
+button.close {
+    background: none repeat scroll 0 0 transparent;
+    border: 0 none;
+    cursor: pointer;
+    padding: 0;
+}
+.close {
+    color: #000000;
+    float: right;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 20px;
+    opacity: 0.2;
+    text-shadow: 0 1px 0 #FFFFFF;
+}
+.alert-danger h4, .alert-error h4 {
+    color: #B94A48;
+}
+.alert h4 {
+    margin: 0;
+}
  
+h4 {
+    font-size: 17.5px;
+}
+#popup, #popup2, .bMulti {
+background-color: #fff;
+border-radius: 10px 10px 10px 10px;
+box-shadow: 0 0 25px 5px #999;
+color: #111;
+display: none;
+min-width: 450px;
+padding: 1px;
+}
