--- a/templates/category.htm
+++ b/templates/category.htm
@@ -4,25 +4,7 @@
  
  <link type="text/css" rel="stylesheet" href="/misc/category.css" />
 
- <script language="javascript" type="text/javascript" src="/misc/js/imagetooltip.js"></script>
- <script language="javascript" type="text/javascript" src="/misc/js/jquery.bpopup.min.js"></script>
  
-<script type="text/javascript">
-	;(function($) {
-         $(function() {
-            $('.pop1').bind('click', function(e) {
-                e.preventDefault();
-				var a_href = $(this).attr('id');
-				$("#contentss").load(a_href);
-                $('#popup').bPopup({
-				});
-			});
-			 
-        });
-
-    })(jQuery);
-
-</script>
 <style>
  
 #popup, #popup2, .bMulti {
@@ -71,7 +53,7 @@ padding: 1px;
 
 		<div class="clr pad-tb" style="width:200px !important">
 				{% if products.stock >= 1 %}
-					<div class="blue-button"><a href="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
+					<div class="blue-button"><a href="##"  class="pop1" id="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
 				{% else %}
 					<div class="wish-button"><a href="/addtowatchlist?itemid={{ products.catalogid }}">WISH LIST</a></div>
 				{% endif %}
@@ -107,7 +89,7 @@ padding: 1px;
 
 <div class="clr pad-tb" style="width:200px !important">
 				{% if products.stock >= 1 %}
-					<div class="blue-button"><a href="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
+					<div class="blue-button"><a href="##"  class="pop1" id="/addtocart?item_id={{ products.catalogid }}" >Add to Tank</a></div>
 				{% else %}
 						{% if request.session.IsLogin %}
 							<div class="wish-button "><a href="##" id="/addtowatchlist?itemid={{products.catalogid}}&name=" class="pop1">WISH LIST</a></div>
@@ -125,13 +107,7 @@ padding: 1px;
 {% endfor %}
 
  </table>
- 
- 
-
- 
- 
- 
-
+  
  <div class="clr"></div>
 </div>
 
@@ -142,8 +118,5 @@ padding: 1px;
 <div class="float-left"></div>
 
 </div></div>
-<div id="popup" style="left: -700px; position: absolute; top: 1177px; z-index: 9999; opacity: 1; display: none;min-height:200px;">
-        
-        <div id="contentss" style="height: auto; width: auto;"></div>
-</div>
+ 
 {% endblock content %}
