--- a/templates/front.htm
+++ b/templates/front.htm
@@ -1,6 +1,24 @@
 {% extends 'base.html' %}{% load tagsfilter %}
 {% block content %}
+ <script language="javascript" type="text/javascript" src="/misc/js/imagetooltip.js"></script>
+ <script language="javascript" type="text/javascript" src="/misc/js/jquery.bpopup.min.js"></script>
+ <link type="text/css" rel="stylesheet" href="/misc/style_new.css" />
+<script type="text/javascript">
+	;(function($) {
+         $(function() {
+            $('.pop1').bind('click', function(e) {
+                e.preventDefault();
+				var a_href = $(this).attr('id');
+				$("#contentss").load(a_href);
+                $('#popup').bPopup({
+				});
+			});
+			 
+        });
 
+    })(jQuery);
+
+</script>
 <div class="width10 float-left">&nbsp;&nbsp;</div>
 <div class="wid748 float-left">
 <div class="height12 clr"></div>
@@ -20,10 +38,10 @@
             <td valign="top" height=215  align="left" class="superSpecialBG"><table cellspacing="0" cellpadding="0" border="0">
                 <tbody><tr>
                   <td valign="top" align="center"><a href="/product?pid={{ homespecial.catalogid }}"><img border="0" alt="{{homespecial.name}}" src='http://commondatastorage.googleapis.com/swf_product_images/{{  homespecial.thumbnail|strreplace:"assets/images/" }}' width=210 height=180></a></td>
-                  <td width="25"><img width="25" height="1" alt="" src="http://commondatastorage.googleapis.com/swf_product_images/templates/saltwaterfish/images/spacer.gif"></td>
+                  <td width="25">&nbsp;</td>
                   <td valign="top" align="center"><table width="100%" cellspacing="0" cellpadding="0" border="0">
                       <tbody><tr>
-                        <td><img width="1" height="12" alt="" src="http://commondatastorage.googleapis.com/swf_product_images/templates/saltwaterfish/images/spacer.gif"></td>
+                        <td>&nbsp;</td>
                       </tr>
                       <tr>
                         <td valign="top" height="45" align="left" ><a href="/product?pid={{ homespecial.catalogid }}" class="clr resources "><b>{{homespecial.name}}</b></a><br>{{homespecial.description}}</td>
@@ -38,18 +56,16 @@
                           <table>
                             <tbody><tr>
                               <td class="home-item">Orginial Price: ${{ homespecial.price2|floatformat:2 }}</td>
-                              <td><img width="13" height="1" alt="" src="http://commondatastorage.googleapis.com/swf_product_images/templates/saltwaterfish/images/spacer.gif"></td>
+                              <td>&nbsp;</td>
                               <td valign="top"><span class="price2">Now ${{ homespecial.price|floatformat:2 }}</span></td>
                             </tr>
                           </tbody></table>
                           
                           <!--END: SALEPRICE--></td>
                       </tr>
+                       
                       <tr>
-                        <td><img width="1" height="12" alt="" src="http://commondatastorage.googleapis.com/swf_product_images/templates/saltwaterfish/images/spacer.gif"></td>
-                      </tr>
-                      <tr>
-                        <td valign="middle" align="left" class="item"><a href="/addtocart?item_id={{homespecial.catalogid}}"><img width="130" height="35" border="0" alt="Add to Tank" src="/misc/images/add_tant.png"></a></td>
+                        <td valign="middle" align="left" class="item"><a href="##"  class="pop1" id="/addtocart?item_id={{homespecial.catalogid}}" ><img width="130" height="35" border="0" alt="Add to Tank" src="/misc/images/add_tant.png"></a></td>
                       </tr>
                     </tbody></table></td>
                 </tr>
@@ -57,7 +73,7 @@
               <div class="allSpecials">
                 <table cellspacing="0" cellpadding="0" border="0">
                   <tbody><tr>
-                    <td><img width="12" hspace="10" height="9" alt="Specials" src="http://commondatastorage.googleapis.com/swf_product_images/templates/saltwaterfish/images/green-arrow.png"></td>
+                    <td><img width="12" hspace="10" height="9" alt="Specials" src="misc/images/green-arrow.png"></td>
                     <td><a class="homeSpecials" target="_blank" href="search.asp?keyword=OnSale&amp;search.x=0&amp;search.y=0">Show All Specials</a></td>
                   </tr>
                 </tbody></table>
@@ -107,4 +123,5 @@
 <div class="float-left width10"></div>
 
 </div>
+ 
 {% endblock content %}
