--- a/templates/myaccount_widget.htm
+++ b/templates/myaccount_widget.htm
@@ -4,8 +4,6 @@
 label.error { float: none; color: red; padding-left: .5em; vertical-align: top; }
 -->
 {% load tagsfilter %}
-<script language="javascript" type="text/javascript" src="/misc/js/jquery-1.7.2.min.js"></script>
-<script language="javascript" type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js"></script>
 <script type="text/javascript">
 $(function() {
    $( "#form" ).submit(function() {
@@ -118,17 +116,22 @@ My Account
 		
 		<table>
 		<tr>
-			<td class=" padleft2" width="10"><img src="misc/images/1.jpg" border="0" /></td>
-			<td class=" my_cart_txt1 padleft5 padtop3" width="210"><a href="/product?pid=1938">{{item.item_name}}</a></td>
-			<td class=" my_cart_txt2 padleft5 padtop3">${{item.saleprice|floatformat:2}}</td>
+			<td class=" padleft2" width="10"><b>{{item.quantity}}</b></td>
+			<td class=" my_cart_txt1 padleft5 padtop3" width="210"><a href="/product?pid=1938"  class="master-link" style="font-size:12px; color: #005F8A;">{{item.item_name}}</a></td>
+			<td class=" my_cart_txt2 padleft5 padtop3">${{item.price|floatformat:2}}</td>
 		</tr>
 		<tr><td colspan=3><img src="misc/images/mycart_line.jpg" border="0" /></td></tr>
 		</table>
 		{%endfor%}
 		</td>
 		</tr>
+		{% if request.session.IsLogin %}
+		{% if request.session.Customer.billing_state == "FL"  %}
+		<tr><td  class="float_right padright10">Estimated.Tax:&nbsp;&nbsp;<strong>${{request.session.CartInfo.tax_total|floatformat:2}}</strong></td></tr>
+		{%endif%}
+		{%endif%}
 		<tr><td  class="float_right padright10">Total:&nbsp;&nbsp;<strong>${{request.session.CartInfo.order_total|floatformat:2}}</strong></td></tr>
-		<tr><td align=center> <a href="/viewcart"><img src="misc/images/view_cart.jpg" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/checkoutlogin"><img src="misc/images/chk_out.jpg" border="0" /></a> </td></tr>
+		<tr><td align=center> <a href="/viewcart"><img src="misc/images/view_cart.jpg" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/checkoutlogin?gateway=AUTHORIZENET"><img src="misc/images/chk_out.jpg" border="0" /></a> </td></tr>
 		</table>
  		
 		</div>
