--- a/templates/PaypalPurchase.html
+++ b/templates/PaypalPurchase.html
@@ -16,4 +16,5 @@
 <tr><td>Transaction Reference Number</td><td>{{tx}}<td></tr>
 <tr><td>Transaction Amount</td><td>${{amount}}<td></tr>
 </table>
+</div>
 {% endblock content %}
