--- a/templates/orderinfo_bkp_0628.htm
+++ b/templates/orderinfo_bkp_0628.htm
@@ -170,7 +170,7 @@ Fort Pierce, FL 34946</div></div></div>
 	</tr>
 	<tr bgcolor="#FFFFFF" ><td colspan=3></td>
 	<td><strong>Taxes:</strong></td>
-	<td>${{item.otax}}</td>
+	<td>${{item.odiscount}}</td>
 	</tr>
 	<tr bgcolor="#FFFFFF" ><td colspan=3></td>
 	<td><strong>Shipping:</strong></td>
